RESOLVED FIXED311458
REGRESSION: '_setAllowsPointerDragBeforeLiftDelay:' is deprecated
https://bugs.webkit.org/show_bug.cgi?id=311458
Summary REGRESSION: '_setAllowsPointerDragBeforeLiftDelay:' is deprecated
Jonathan Bedard
Reported 2026-04-03 21:21:21 PDT
'_setAllowsPointerDragBeforeLiftDelay:' is deprecated. Suppress it.
Attachments
Jonathan Bedard
Comment 1 2026-04-03 21:21:22 PDT
Jonathan Bedard
Comment 2 2026-04-03 21:23:48 PDT
EWS
Comment 3 2026-04-03 21:26:33 PDT
Committed 310556@main (fd4d297fe5f2): <https://commits.webkit.org/310556@main> Reviewed commits have been landed. Closing PR #62017 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.