REGRESSION: '_setAllowsPointerDragBeforeLiftDelay:' is deprecated https://bugs.webkit.org/show_bug.cgi?id=311458 rdar://174059330

Unreviewed build fix.

* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView setUpDragAndDropInteractions]):

Canonical link: https://commits.webkit.org/310556@main